# ethereum-zk-consensus-client

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yaml  out.txt
crates/celestia-grpc-client/: Cargo.toml  README.md
crates/celestia-grpc-client/proto/: buf.yaml
crates/celestia-grpc-client/proto/celestia/zkism/v1/: events.proto  genesis.proto  query.proto  tx.proto  types.proto
crates/celestia-grpc-client/src/: client.rs  error.rs  lib.rs  message.rs  types.rs
crates/celestia-grpc-client/src/proto/: celestia.zkism.v1.rs  celestia.zkism.v1.tonic.rs  cosmos.base.query.v1beta1.rs  hyperlane.core.v1.rs  hyperlane.core.v1.tonic.rs  hyperlane.warp.v1.rs  hyperlane.warp.v1.tonic.rs  mod.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: main.rs
crates/ev-hyperlane/ev-hyperlane-program/: Cargo.toml
crates/ev-hyperlane/ev-hyperlane-program/src/: main.rs
crates/ev-hyperlane/ev-hyperlane-script/: Cargo.toml  build.rs
crates/mock/: Cargo.toml
crates/mock/src/: main.rs
crates/project/: Cargo.toml  build.rs
crates/project/src/: lib.rs  main.rs
crates/project/tests/: mod.rs
crates/prover-service/: Cargo.toml  build.rs
crates/prover-service/src/: config.rs  hyperlane.rs  indexer.rs  main.rs
crates/prover-service/tests/: mod.rs
crates/sp1-helios/: Cargo.toml
crates/sp1-helios/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
integrations/: sp1-helios.md
testnet/ev-node/: entrypoint.sh
