[workspace]
members = ["crates/circuit", "crates/project", "crates/types"]

[workspace.dependencies]
sp1-zkvm = "=5.2.1"
sp1-sdk = { version = "=5.2.1", features = ["native-gnark"] }
serde = { version = "1.0", features = ["derive"] }
types = { path = "crates/types" }
bincode = "1.3.3"
celestia-grpc = "0.8.0"
prost = "0.13"
hex = "0.4"
tokio = { version = "1.38.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "rt-multi-thread",
], default-features = false }
helios = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
sp1-helios-primitives = { git = "https://github.com/succinctlabs/sp1-helios", rev = "bdd4b4c8da31703dd93f064b5c042bbf215121f0" }
sp1-helios-script = { git = "https://github.com/succinctlabs/sp1-helios", rev = "bdd4b4c8da31703dd93f064b5c042bbf215121f0" }
alloy = { version = "1.0.37", features = ["full", "signer-ledger"] }
alloy-sol-types = "1.0.37"
alloy-primitives = "1.3.0"
alloy-trie = "0.9.1"
anyhow = "1.0.86"
cargo_metadata = "0.18"
reqwest = "0.12.5"
serde_cbor = "0.11.2"
serde_json = "1.0.125"
tracing = "0.1.37"
tree_hash = "0.10.0"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
# From upstream: https://github.com/a16z/helios/blob/master/Cargo.toml#L115
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
