[workspace]
members = [
    "crates/celestia-grpc-client",
    "crates/ev-hyperlane/ev-hyperlane-program",
    "crates/ev-hyperlane/ev-hyperlane-script",
    "crates/mock",
    "crates/prover-service",
    "crates/sp1-helios",
    "crates/types",
]

[workspace.dependencies]
alloy = { version = "1.0.37", features = ["full", "signer-ledger"] }
alloy-primitives = "1.3.0"
alloy-provider = { version = "1.0.32", default-features = false, features = [
    "ws",
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-sol-types = "1.0.37"
alloy-trie = "0.9.1"
anyhow = "1.0.86"
async-trait = "0.1.88"
bech32 = "0.11.0"
bincode = "1.3.3"
bytes = "1.10.1"
cargo_metadata = "0.18"
celestia-grpc = "0.8.0"
celestia-grpc-client = { path = "crates/celestia-grpc-client" }
dirs = "5.0.1"
ev-state-queries = { git = "https://github.com/celestiaorg/celestia-zkevm", rev = "107bd4990e30b6e410c3423dc4a3af2bbd60018d" }
ev-zkevm-types = { git = "https://github.com/celestiaorg/celestia-zkevm", rev = "107bd4990e30b6e410c3423dc4a3af2bbd60018d" }
helios = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
hex = "0.4"
prost = "0.13"
reqwest = "0.12.5"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.125"
sp1-helios-primitives = { git = "https://github.com/succinctlabs/sp1-helios", rev = "bdd4b4c8da31703dd93f064b5c042bbf215121f0" }
sp1-helios-script = { git = "https://github.com/succinctlabs/sp1-helios", rev = "bdd4b4c8da31703dd93f064b5c042bbf215121f0" }
sp1-prover = { version = "=5.2.2" }
sp1-sdk = { version = "=5.2.2", features = ["native-gnark"] }
sp1-zkvm = "=5.2.1"
tendermint = "0.40.1"
tendermint-proto = "*"
thiserror = "2.0.17"
tokio = { version = "1.38.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "rt-multi-thread",
], default-features = false }
tracing = "0.1.37"
tree_hash = "0.10.0"
types = { path = "crates/types" }
zkevm-storage = { package = "storage", git = "https://github.com/celestiaorg/celestia-zkevm", rev = "107bd4990e30b6e410c3423dc4a3af2bbd60018d" }

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
# From upstream: https://github.com/a16z/helios/blob/master/Cargo.toml#L115
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
