[package]
name = "circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-zkvm = { workspace = true, features = ["verify"] }
sp1-helios-primitives.workspace = true
types.workspace = true
bincode.workspace = true
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
alloy-sol-types = "1.0.37"
