[package]
name = "sp1-helios"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-sol-types = "1.0.37"
bincode.workspace = true
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
sp1-helios-primitives.workspace = true
sp1-zkvm = { workspace = true, features = ["verify"] }
types.workspace = true
