[package]
version = "0.1.0"
name = "ev-hyperlane-script"
edition = "2021"
default-run = "ev-hyperlane"

[[bin]]
name = "ev-hyperlane"
path = "src/bin/main.rs"

[[bin]]
name = "vkey-ev-hyperlane"
path = "src/bin/vkey.rs"

[dependencies]
alloy = { workspace = true }
alloy-eips = { version = "1.0.32" }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { version = "4.0", features = ["cargo", "derive", "env"] }
dirs = { workspace = true }
ev-zkevm-types = { workspace = true }
sp1-sdk = { workspace = true }
zkevm-storage = { workspace = true }
tokio = { workspace = true }
url = { version = "2.5", default-features = false }

[build-dependencies]
sp1-build = "5.2.1"
